compiler/tests/success/otbn/intrinsic_sll.jazz
export
fn sll(reg u32 arg0 arg1) {
    reg u32 x;
    x = #SLL(arg0, arg1);
    [x] = x;
}
