compiler/tests/fail/arm-m4/intrinsic_strhS.jazz
export
fn strh(reg u32 arg0, reg u32 arg1) {
    ?{}, (u16)[arg0] = #STRHS(arg0);
}
